# mai

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bundle-release.sh
.github/workflows/: rust.yml
MAI/: AppDelegate.swift  Main.swift
MAI.xcodeproj/: project.pbxproj
MAI/Activity/: CPU.swift  RAM.swift
MAI/Assets.xcassets/AppIcon.appiconset/: Contents.json
resources/test/: top-output.txt  vm_stat-output.txt
src/: main.rs
src/activity/: cpu.rs  generator.rs  mod.rs  ram.rs
